tests/macro-tests/cases/ui_node/delegate_list_expr_error_incorrect_mut.stderr
error[E0596]: cannot borrow `*children` as mutable, as it is behind a `&` reference
 --> cases/ui_node/delegate_list_expr_error_incorrect_mut.rs:5:27
  |
5 | #[ui_node(delegate_list = &self.inner)]
  |                           ^ `children` is a `&` reference, so the data it refers to cannot be borrowed as mutable
  |
help: consider changing this to be a mutable reference
  |
5 | #[ui_node(delegate_list = &mut self.inner)]
  |                            +++
